--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@codemirror/autocomplete": "^6.10.2",
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/highlight": "^0.19.8",
+    "@codemirror/lang-javascript": "^6.2.1",
+    "@codemirror/language": "^6.9.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +15,18 @@
     "@types/node": "^16.18.60",
     "@types/react": "^18.2.36",
     "@types/react-dom": "^18.2.14",
+    "@uiw/codemirror-extensions-classname": "^4.21.20",
+    "@uiw/codemirror-extensions-color": "^4.21.20",
+    "@uiw/codemirror-extensions-langs": "^4.21.20",
+    "@uiw/codemirror-extensions-line-numbers-relative": "^4.21.20",
+    "@uiw/codemirror-extensions-mentions": "^4.21.20",
+    "@uiw/codemirror-theme-okaidia": "^4.21.20",
+    "@uiw/codemirror-themes": "^4.21.20",
+    "@uiw/codemirror-themes-all": "^4.21.20",
+    "@uiw/react-codemirror": "^4.21.20",
+    "axios": "^1.6.0",
+    "buffer": "^6.0.3",
+    "codemirror": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
