--- a/package.json
+++ b/package.json
@@ -27,11 +27,16 @@
     "axios": "^1.6.0",
     "buffer": "^6.0.3",
     "codemirror": "^6.0.1",
+    "lib0": "^0.2.87",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "y-codemirror.next": "^0.3.2",
+    "y-webrtc": "^10.2.5",
+    "y-websocket": "^1.5.0",
+    "yjs": "^13.6.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -56,5 +61,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.5"
   }
 }
