--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@codemirror/autocomplete": "^6.10.2",
     "@codemirror/basic-setup": "^0.20.0",
     "@codemirror/highlight": "^0.19.8",
+    "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-javascript": "^6.2.1",
+    "@codemirror/lang-python": "^6.1.3",
     "@codemirror/language": "^6.9.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
