--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@codemirror/lang-javascript": "^6.2.1",
     "@codemirror/lang-python": "^6.1.3",
     "@codemirror/language": "^6.9.2",
+    "@codemirror/lint": "^6.4.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -29,6 +30,7 @@
     "axios": "^1.6.0",
     "buffer": "^6.0.3",
     "codemirror": "^6.0.1",
+    "eslint-linter-browserify": "^8.53.0",
     "lib0": "^0.2.87",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
