--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@codemirror/autocomplete": "^6.10.2",
     "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/commands": "^6.3.0",
     "@codemirror/highlight": "^0.19.8",
     "@codemirror/lang-cpp": "^6.0.2",
     "@codemirror/lang-html": "^6.4.6",
@@ -15,6 +16,9 @@
     "@codemirror/lang-sql": "^6.5.4",
     "@codemirror/language": "^6.9.2",
     "@codemirror/lint": "^6.4.2",
+    "@lezer/common": "^1.1.1",
+    "@lezer/html": "^1.3.6",
+    "@lezer/javascript": "^1.4.9",
     "@replit/codemirror-lang-csharp": "^6.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -35,12 +39,14 @@
     "axios": "^1.6.0",
     "buffer": "^6.0.3",
     "codemirror": "^6.0.1",
+    "codemirror-languageserver": "^1.11.0",
     "eslint-linter-browserify": "^8.53.0",
     "lib0": "^0.2.87",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "vscode-json-languageservice": "^5.3.7",
     "web-vitals": "^2.1.4",
     "y-codemirror.next": "^0.3.2",
     "y-webrtc": "^10.2.5",
